cmake_minimum_required(VERSION 2.8)
project( Pipeline )
set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
find_package( OpenCV REQUIRED )
find_package( PythonLibs 2.7 REQUIRED)
find_package( PythonInterp 2.7 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
add_executable( Pipeline pipeline.cpp Json.cpp)
target_link_libraries( Pipeline ${OpenCV_LIBS} ${PYTHON_LIBRARIES})
